--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -74,8 +74,12 @@
     </div>
     <div class="second-section-three">
       <%= cl_image_tag("foenix-dots_alc8g7.png", :quality=>"auto", class: "second-section-three_svg") %>
-      <%= cl_image_tag("foenix-milk_zg6rhu.png", :quality=>"auto", class: "second-section-three_image") %>
-      <%= cl_image_tag("foenix-tube_zlcerz.png", :quality=>"auto", class: "second-section-three_image") %>
+      <div data-aos="fade-right" data-aos-duration="2000">
+        <%= cl_image_tag("foenix-milk_zg6rhu.png", :quality=>"auto", class: "second-section-three_image") %>
+      </div>
+      <div data-aos="fade-left" data-aos-duration="2000">
+        <%= cl_image_tag("foenix-tube_zlcerz.png", :quality=>"auto", class: "second-section-three_image") %>
+      </div>
     </div>
   <div class="third-section">
     <%= cl_image_tag("foenix-home-background_wziieq.png", :quality=>"auto", class: "third-section_svg") %>
@@ -107,8 +111,8 @@
       </div>
       <div class="tabs-area">
         <%= cl_image_tag("long-pill_xrmujn.png", :quality=>"auto") %>
-        <div id="London" class="city" data-aos="fade-up" data-aos-duration="2000">
-          <div class="tab-text">
+        <div id="London" class="city" >
+          <div class="tab-text" data-aos="fade-up" data-aos-duration="2000">
             <h4><%= t("home.tabs_one_title") %></h4>
             <p><%= t("home.tabs_one_description") %></p>
             <span></span>
@@ -117,11 +121,13 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          <div data-aos="fade-left" data-aos-duration="2000">
+            <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          </div>
         </div>
 
-        <div id="Paris" class="city" style="display:none" data-aos="fade-up" data-aos-duration="2000">
-          <div class="tab-text">
+        <div id="Paris" class="city" style="display:none">
+          <div class="tab-text"  data-aos="fade-up" data-aos-duration="2000">
             <h4><%= t("home.tabs_two_title") %></h4>
             <p><%= t("home.tabs_two_description") %></p>
             <span></span>
@@ -130,11 +136,13 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          <div  data-aos="fade-left" data-aos-duration="2000">
+            <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          </div>
         </div>
 
-        <div id="Tokyo" class="city" style="display:none" data-aos="fade-up" data-aos-duration="2000">
-          <div class="tab-text">
+        <div id="Tokyo" class="city" style="display:none">
+          <div class="tab-text"  data-aos="fade-up" data-aos-duration="2000">
             <h4><%= t("home.tabs_three_title") %></h4>
             <p><%= t("home.tabs_three_description") %></p>
             <span></span>
@@ -143,11 +151,13 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          <div  data-aos="fade-left" data-aos-duration="2000">
+            <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          </div>
         </div>
 
-        <div id="Bogota" class="city" style="display:none" data-aos="fade-up" data-aos-duration="2000">
-          <div class="tab-text">
+        <div id="Bogota" class="city" style="display:none">
+          <div class="tab-text"  data-aos="fade-up" data-aos-duration="2000">
             <h4><%= t("home.tabs_four_title") %></h4>
             <p><%= t("home.tabs_four_description") %></p>
             <span></span>
@@ -156,11 +166,13 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          <div  data-aos="fade-left" data-aos-duration="2000">
+            <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          </div>
         </div>
 
-        <div id="Lexico" class="city"style="display:none" data-aos="fade-up" data-aos-duration="2000">
-          <div class="tab-text">
+        <div id="Lexico" class="city"style="display:none">
+          <div class="tab-text"  data-aos="fade-up" data-aos-duration="2000">
             <h4><%= t("home.tabs_five_title") %></h4>
             <p><%= t("home.tabs_five_description") %></p>
             <span></span>
@@ -169,11 +181,13 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          <div  data-aos="fade-left" data-aos-duration="2000">
+            <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          </div>
         </div>
 
-        <div id="Brussels" class="city" style="display:none" data-aos="fade-up" data-aos-duration="2000">
-          <div class="tab-text">
+        <div id="Brussels" class="city" style="display:none">
+          <div class="tab-text"  data-aos="fade-up" data-aos-duration="2000">
             <h4><%= t("home.tabs_six_title") %></h4>
             <p><%= t("home.tabs_six_description") %></p>
             <span></span>
@@ -182,7 +196,9 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          <div  data-aos="fade-left" data-aos-duration="2000">
+            <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
+          </div>
         </div>
       </div>
       <div class="third-section-video">
