--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -1,17 +1,14 @@
 <div class="distributor-wrapper">
   <div class="distributor-first-section-wrapper">
-    <div class="container">
-      <div class="distributor-section">
-        <div class="distributor-first-section-left">
-          <div class="distributor-left-section-text">
-            <h1 class=""><%= t("distributor.first_section_title") %></h1>
-            <p class="paragraph-text"><%= t("distributor.first_section_text") %></p>
-            <%= image_tag 'about-dots.png', class: 'distributor-dots' %>
-          </div>
-        </div>
-        <div class="distributor-first-section-right d-flex justify-content-center">
-          <%= cl_image_tag("distributor-continents_l9lnki.png", :quality=>"auto", class: "distributor-graphic") %>
-        </div>
+    <div class="distributor-section">
+      <div class="distributor-left-section-text">
+        <h1 class=""><%= t("distributor.first_section_title") %></h1>
+        <p class="paragraph-text"><%= t("distributor.first_section_text") %></p>
+        <%= image_tag 'about-dots.png', class: 'distributor-dots' %>
+      </div>
+      <div class="distributor-first-section-right d-flex justify-content-center">
+        <%#= cl_image_tag("distributor-continents_l9lnki.png", :quality=>"auto", class: "distributor-graphic") %>
+        <%= image_tag 'map-animation.gif', class: 'fxone-first-section-image distributor-first-section-image' %>
       </div>
     </div>
   </div>
