--- a/app/views/pages/fxone_plus.html.erb
+++ b/app/views/pages/fxone_plus.html.erb
@@ -3,17 +3,15 @@
   <div class="about-second-section-wrapper fxone-first-section-wrapper fxone-plus-wrapper">
     <%= image_tag 'about-dots.png', class: 'fxone-plus-dots hide-mobile' %>
     <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-plus-little-pill hide-mobile") %>
-    <div class="container">
-      <div class="about-section fxone-section mobile-column">
-        <div class="about-second-section-left">
-          <h1 class="responsive-header"><%= t("fxone_plus.first_section_title") %></h1>
-          <p class="paragraph-text about-second-section-text inks-card-text"><%= t("fxone_plus.first_section_text") %></p>
-        </div>
-        <div class="about-second-section-right no-padding-mobile">
-          <%= cl_image_tag("fxone-plus_n6k9lj.png", :quality=>"auto", class: "about-graphic about-graphic-two fxone-plus-graphic") %>
-          <div class="coming-soon" style="background-image: url('<%= cl_image_path "coming-soon-background_wjcoct.png" %>')">
-            <p class="coming-soon-text"><%= t("fxone_plus.coming_soon") %></p>
-          </div>
+    <div class="about-section fxone-section fxone-first-section mobile-column">
+      <div class="no-padding-mobile fxone-first-section-text-left">
+        <h1 class="responsive-header"><%= t("fxone_plus.first_section_title") %></h1>
+        <p class="paragraph-text about-second-section-text inks-card-text"><%= t("fxone_plus.first_section_text") %></p>
+      </div>
+      <div class="no-padding-mobile" style="position: relative;">
+        <%= cl_image_tag("fxone-plus_n6k9lj.png", :quality=>"auto", class: "fxone-first-section-image fxone-plus-graphic") %>
+        <div class="coming-soon" style="background-image: url('<%= cl_image_path "coming-soon-background_wjcoct.png" %>')">
+          <p class="coming-soon-text"><%= t("fxone_plus.coming_soon") %></p>
         </div>
       </div>
     </div>
