--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -1,16 +1,12 @@
 <div class="fxone-wrapper fxone-standard">
   <div class="about-second-section-wrapper fxone-first-section-wrapper">
     <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "fxone-big-pill fxone-standard-big-pill show-mobile") %>
-    <div class="container">
-      <div class="about-section fxone-section">
-        <div class="about-second-section-left no-padding-mobile">
-          <h1 class="responsive-header"><%= t("fxone_standard.first_section_title") %></h1>
-          <p class="paragraph-text about-second-section-text inks-card-text"><%= t("fxone_standard.first_section_text") %></p>
-        </div>
-        <div class="about-second-section-right no-padding-mobile">
-          <%= cl_image_tag("fxone-standard-graphic-1_y8kdvn.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
-        </div>
+    <div class="about-section fxone-section fxone-first-section">
+      <div class="no-padding-mobile fxone-first-section-text-left">
+        <h1 class="responsive-header"><%= t("fxone_standard.first_section_title") %></h1>
+        <p class="paragraph-text about-second-section-text inks-card-text"><%= t("fxone_standard.first_section_text") %></p>
       </div>
+        <%= cl_image_tag("fxone-standard-graphic-1_y8kdvn.png", :quality=>"auto", class: "fxone-first-section-image") %>
     </div>
   </div>
   <div class="ownership-second-section-wrapper fxone-second-section-wrapper">
