added fx one logo to required pages

--- a/app/views/pages/cost_of_ownership.html.erb
+++ b/app/views/pages/cost_of_ownership.html.erb
@@ -6,7 +6,7 @@
       <div class="nav-spacer"></div>
       <div class="about-section about-first-section mobile-column">
         <div class="about-first-section-left no-padding-mobile">
-          <h1 class="responsive-header"><%= t("cost_of_ownership.first_section_title") %></h1>
+          <h1 class="responsive-header"><%= t("cost_of_ownership.first_section_title") %> <span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo-right") %></span></h1>
           <p class="paragraph-text"><%= t("cost_of_ownership.first_section_text") %></p>
         </div>
         <div class="about-first-section-right no-padding-mobile">
