--- a/app/views/pages/fxone_plus.html.erb
+++ b/app/views/pages/fxone_plus.html.erb
@@ -5,7 +5,7 @@
     <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-plus-little-pill hide-mobile") %>
     <div class="about-section fxone-section fxone-first-section mobile-column">
       <div class="no-padding-mobile fxone-first-section-text-left">
-        <h1 class="responsive-header"><%= t("fxone_plus.first_section_title") %></h1>
+        <h1 class="responsive-header"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_plus.first_section_title") %></h1>
         <p class="paragraph-text about-second-section-text inks-card-text"><%= t("fxone_plus.first_section_text") %></p>
       </div>
       <div class="no-padding-mobile" style="position: relative;">
