--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -3,7 +3,7 @@
     <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "fxone-big-pill fxone-standard-big-pill show-mobile") %>
     <div class="about-section fxone-section fxone-first-section">
       <div class="no-padding-mobile fxone-first-section-text-left">
-        <h1 class="responsive-header"><%= t("fxone_standard.first_section_title") %></h1>
+        <h1 class="responsive-header"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_standard.first_section_title") %></h1>
         <p class="paragraph-text about-second-section-text inks-card-text"><%= t("fxone_standard.first_section_text") %></p>
       </div>
         <%= cl_image_tag("fxone-standard-graphic-1_y8kdvn.png", :quality=>"auto", class: "fxone-first-section-image") %>
