--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -343,3 +343,23 @@
     }
 }
 
+.fxone-logo {
+  height: 40px;
+  padding-bottom: 8px;
+  padding-right: 5px;
+  @include for-small-devices-down {
+    height: 28px;
+    padding-bottom: 6px;
+  }
+}
+
+.fxone-logo-right {
+  height: 40px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  @include for-small-devices-down {
+    height: 28px;
+    padding-bottom: 6px;
+  }
+}
+
