--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -7,7 +7,8 @@
         <%= cl_image_tag("fxone-remote-graphic-1_mxspzx.png", :quality=>"auto", class: "fxone-first-section-image") %>
       <!-- </div> -->
       <div class="no-padding-mobile fxone-first-section-text">
-        <h1 class="responsive-header"><%= t("fxone_remote.first_section_title") %></h1>
+
+        <h1 class="responsive-header"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_remote.first_section_title") %></h1>
         <p class="paragraph-text about-second-section-text"><%= t("fxone_remote.first_section_text") %></p>
       </div>
     </div>
