--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,46 +1,58 @@
 <div class="footer-wrapper">
   <div class="container">
     <div class="footer-foenix">
-      <div class="footer-section home-section">
-        <%= link_to t('navbar.home'), root_path, class: "grey medium-text footer-link" %>
-      </div>
-      <div class="footer-section">
-        <p class="grey medium-text"><%= t('navbar.products') %></p>
-        <%= link_to t('navbar.printers'), root_path, class: "light-grey footer-link" %>
-        <%= link_to t('navbar.software'), root_path, class: "light-grey footer-link" %>
-        <%= link_to t('navbar.inks'), root_path, class: "light-grey footer-link" %>
-      </div>
-      <div class="footer-section">
-        <p class="grey medium-text"><%= t('navbar.services') %></p>
-        <%= link_to t('navbar.distributors'), root_path, class: "light-grey footer-link" %>
-        <%= link_to t('navbar.cost'), root_path, class: "light-grey footer-link" %>
-        <%= link_to t('navbar.faq'), root_path, class: "light-grey footer-link" %>
-      </div>
-      <div class="footer-section">
-        <p class="grey medium-text"><%= t('navbar.company') %></p>
-        <%= link_to t('navbar.about'), root_path, class: "light-grey footer-link" %>
-        <%= link_to t('navbar.careers'), root_path, class: "light-grey footer-link" %>
-        <%= link_to t('navbar.news'), root_path, class: "light-grey footer-link" %>
-      </div>
-      <div class="footer-section">
-        <% if user_signed_in? %>
-          <%= link_to t('navbar.logout'), destroy_user_session_path, method: :delete, class: "grey medium-text footer-link" %>
-        <% else %>
-          <%= link_to t('navbar.login'), new_user_session_path, class: "grey medium-text footer-link" %>
-        <% end %>
-      </div>
-      <div class="footer-section">
-        <%= link_to t("navbar.contact"), root_path, class: 'grey medium-text footer-link mb16' %>
-        <%= link_to t('navbar.privacy_policy'), privacy_policy_path, class: "light-grey footer-link" %>
-      </div>
-      <div class="footer-section">
-        <a href="#" role="button" id="productsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="footer-link grey">
-          <%= locale.capitalize %> <i class="fas fa-chevron-down small-chevron"></i>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="productsDropdown">
-          <%= link_to "English", { :locale=>'en' }, class: "dropdown-item" %>
-          <%= link_to "Français", { :locale=>'fr' }, class: "dropdown-item" %>
+      <div class="footer-left">
+        <div class="footer-top">
+          <div class="footer-section home-section">
+            <%= link_to t('navbar.home'), root_path, class: "footer-title footer-link" %>
+          </div>
+          <div class="footer-section">
+            <p class="footer-title"><%= t('navbar.products') %></p>
+            <%= link_to t('navbar.printers'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.software'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.inks'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+          </div>
+          <div class="footer-section">
+            <p class="footer-title"><%= t('navbar.services') %></p>
+            <%= link_to t('navbar.distributors'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.cost'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.faq'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+          </div>
+          <div class="footer-section">
+            <p class="footer-title"><%= t('navbar.company') %></p>
+            <%= link_to t('navbar.about'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.careers'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.news'), root_path, class: "light-grey footer-link s-medium-text mb-2" %>
+          </div>
         </div>
+        <p class="trademark trademark-web">© Foenix Coding</p>
+      </div>
+      <div class="footer-right">
+        <div class="footer-top footer-top-right">
+          <div class="footer-section">
+            <% if user_signed_in? %>
+              <%= link_to t('navbar.logout'), destroy_user_session_path, method: :delete, class: "footer-title footer-link" %>
+            <% else %>
+              <%= link_to t('navbar.login'), new_user_session_path, class: "footer-title footer-link" %>
+            <% end %>
+          </div>
+          <div class="footer-section">
+            <%= link_to t("navbar.contact"), root_path, class: 'footer-title footer-link mb16' %>
+            <%#= link_to t('navbar.privacy_policy'), privacy_policy_path, class: "light-grey footer-link s-medium-text mb-2" %>
+          </div>
+          <div class="footer-section">
+            <a href="#" role="button" id="productsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="footer-link grey footer-lang-link">
+              <%= locale.capitalize %> <i class="fas fa-chevron-down small-chevron"></i>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="productsDropdown">
+              <ul class="dropdown-menu-ul">
+                <li class="d-flex align-items-center"><%= image_tag 'uk.png' %><%= link_to "English", { :locale=>'en' }, class: "dropdown-item" %></li>
+                <li class="d-flex align-items-center"><%= image_tag 'france.png' %> <%= link_to "Français", { :locale=>'fr' }, class: "dropdown-item" %></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <p class="trademark trademark-mobile">© Foenix Coding</p>
       </div>
     </div>
   </div>
