--- a/app/views/admin/jobs/_form.html.erb
+++ b/app/views/admin/jobs/_form.html.erb
@@ -29,5 +29,5 @@
   <%= f.input :responsibility8 %>
   <%= f.input :responsibility9 %>
   <%= f.input :responsibility10 %>
-  <%= f.submit %>
+  <%= f.submit class: 'crud-button' %>
 <% end %>
