--- a/app/views/admin/countries/new.html.erb
+++ b/app/views/admin/countries/new.html.erb
@@ -1,1 +1,8 @@
-<%= render 'form' %>
+<div class="admin-wrapper">
+  <%= cl_image_tag("inks_big_pill_dqob2a.png", class: "jobs-big-pill hide-mobile") %>
+  <%= cl_image_tag("inks_little_pill_pahv4x.png", class: "jobs-little-pill hide-mobile") %>
+  <div class="container position-relative">
+    <%= render 'form' %>
+  </div>
+</div>
+
