--- a/app/views/admin/jobs/edit.html.erb
+++ b/app/views/admin/jobs/edit.html.erb
@@ -1,5 +1,8 @@
-<div class="container" style="padding-top: 120px;">
-  <h2>Edit Job Posting</h2>
-  <%= render "form" %>
+<div class="admin-wrapper">
+  <%= cl_image_tag("inks_big_pill_dqob2a.png", class: "jobs-big-pill hide-mobile") %>
+  <%= cl_image_tag("inks_little_pill_pahv4x.png", class: "jobs-little-pill hide-mobile") %>
+  <div class="container position-relative">
+    <h2>Edit Job Posting</h2>
+    <%= render "form" %>
+  </div>
 </div>
-
