added admin link in navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -81,6 +81,11 @@
   }
 }
 
+.hidden-desktop {
+  @include for-large-devices-up {
+    display: none;
+  }
+}
 
 .hidden {
   @include for-medium-devices-down {
