--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -50,13 +50,41 @@
         </ul>
       </div>
     </div>
+    <% if current_user&.admin %>
+      <div class="navbar-item hidden">
+        <a href="#" role="button" id="adminDropdown" class="navbar-title nav-left" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= t("navbar.admin") %> <i class="fas fa-chevron-down small-chevron"></i>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="adminDropdown">
+          <ul class="dropdown-menu-ul">
+            <li><%= image_tag 'icon-4.png' %><%= link_to t("navbar.countries"), admin_countries_path %></li>
+            <li><%= image_tag 'icon-5.png' %><%= link_to t("navbar.jobs"), jobs_path %></li>
+            <li><%= image_tag 'icon-6.png' %><%= link_to t("navbar.posts"), posts_path %></li>
+          </ul>
+        </div>
+      </div>
+    <% end %>
   </div>
+  <% if current_user&.admin %>
+    <div class="navbar-item hidden-desktop">
+      <a href="#" role="button" id="adminDropdown" class="navbar-title nav-left" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <%= t("navbar.admin") %> <i class="fas fa-chevron-down small-chevron"></i>
+      </a>
+      <div class="dropdown-menu" aria-labelledby="adminDropdown">
+        <ul class="dropdown-menu-ul">
+          <li><%= image_tag 'icon-4.png' %><%= link_to t("navbar.countries"), admin_countries_path %></li>
+          <li><%= image_tag 'icon-5.png' %><%= link_to t("navbar.jobs"), jobs_path %></li>
+          <li><%= image_tag 'icon-6.png' %><%= link_to t("navbar.posts"), posts_path %></li>
+        </ul>
+      </div>
+    </div>
+  <% end %>
   <div class="navbar-right hidden">
     <div class="navbar-item">
       <% if user_signed_in? %>
-        <%= link_to( t('navbar.logout'), destroy_user_session_path, method: :delete, class: "navbar-title nav-right" ) %>
+        <%= link_to( t('navbar.logout'), destroy_user_session_path, method: :delete, class: "navbar-title nav-right m-0" ) %>
       <% else %>
-        <%= link_to t('navbar.login'), new_user_session_path, class: "navbar-title nav-right"  %>
+        <%= link_to t('navbar.login'), new_user_session_path, class: "navbar-title nav-right m-0"  %>
       <% end %>
     </div>
     <div class="navbar-item">
