--- a/app/assets/stylesheets/components/_menus.scss
+++ b/app/assets/stylesheets/components/_menus.scss
@@ -37,8 +37,8 @@
     border-radius: 5px;
 
     & img {
-      width: 20px;
-      height: 20px;
+      width: 20px !important;
+      height: 20px !important;
       border-radius: 3px;
 
       @include for-xsmall-phone-only {
