--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -84,10 +84,8 @@
   <div class="third-section">
     <%= cl_image_tag("foenix-home-background_wziieq.png", :quality=>"auto", class: "third-section_svg") %>
     <div class="third-section-features">
-      <div class="" data-aos="fade-up" data-aos-duration="2000">
-        <div class="jc">
-          <%= image_tag 'home-icon-2.png', class: 'about-icon ma-auto' %>
-        </div>
+      <div class="third-section-content" data-aos="fade-up" data-aos-duration="2000">
+        <%= image_tag 'home-icon-2.png', class: 'about-icon' %>
         <h2><%= t("home.tabs_title") %></h2>
       </div>
       <div class="tab">
