--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -135,7 +135,7 @@
 </div>
 <script>
   function openNav() {
-    document.getElementById("mobile-links").style.top = "calc(50% - 312px)"
+    document.getElementById("mobile-links").style.top = "20px"
     document.getElementById("mobile-menu").style.visibility = "visible";
     document.getElementById("mobile-menu").style.backgroundColor = "rgba(0,0,0,0.4)";
   }
