--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -381,6 +381,13 @@
 
 }
 
+.third-section-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .third-section-features {
   padding-top: 300px;
   position: relative;
