--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -121,7 +121,7 @@
         <div data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'fxone-icon-2.png', class: 'about-icon' %>
         </div>
-        <h3 class="about-first-section-text ownership-second-section-text text-center" data-aos="fade-up" data-aos-duration="2000"><%= t("fxone_remote.fourth_section_title") %></h3>
+        <h3 class="text-center" data-aos="fade-up" data-aos-duration="2000"><%= t("fxone_remote.fourth_section_title") %></h3>
       </div>
       <div class="about-section fxone-section">
         <div class="about-first-section-left">
