not finished, just for fanning

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -74,10 +74,10 @@
     </div>
     <div class="second-section-three">
       <%= cl_image_tag("foenix-dots_alc8g7.png", :quality=>"auto", class: "second-section-three_svg") %>
-      <div data-aos="fade-right" data-aos-duration="2000">
+      <div>
         <%= cl_image_tag("foenix-milk_zg6rhu.png", :quality=>"auto", class: "second-section-three_image") %>
       </div>
-      <div data-aos="fade-left" data-aos-duration="2000">
+      <div>
         <%= cl_image_tag("foenix-tube_zlcerz.png", :quality=>"auto", class: "second-section-three_image") %>
       </div>
     </div>
@@ -110,7 +110,7 @@
       <div class="tabs-area">
         <%= cl_image_tag("long-pill_xrmujn.png", :quality=>"auto") %>
         <div id="London" class="city" >
-          <div class="tab-text" data-aos="fade-up" data-aos-duration="2000">
+          <div class="tab-text" >
             <h4><%= t("home.tabs_one_title") %></h4>
             <p><%= t("home.tabs_one_description") %></p>
             <span></span>
@@ -119,13 +119,13 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <div data-aos="fade-left" data-aos-duration="2000">
+          <div>
             <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
           </div>
         </div>
 
         <div id="Paris" class="city" style="display:none">
-          <div class="tab-text"  data-aos="fade-up" data-aos-duration="2000">
+          <div class="tab-text"  >
             <h4><%= t("home.tabs_two_title") %></h4>
             <p><%= t("home.tabs_two_description") %></p>
             <span></span>
@@ -134,13 +134,13 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <div  data-aos="fade-left" data-aos-duration="2000">
+          <div >
             <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
           </div>
         </div>
 
         <div id="Tokyo" class="city" style="display:none">
-          <div class="tab-text"  data-aos="fade-up" data-aos-duration="2000">
+          <div class="tab-text">
             <h4><%= t("home.tabs_three_title") %></h4>
             <p><%= t("home.tabs_three_description") %></p>
             <span></span>
@@ -149,13 +149,13 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <div  data-aos="fade-left" data-aos-duration="2000">
+          <div >
             <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
           </div>
         </div>
 
         <div id="Bogota" class="city" style="display:none">
-          <div class="tab-text"  data-aos="fade-up" data-aos-duration="2000">
+          <div class="tab-text">
             <h4><%= t("home.tabs_four_title") %></h4>
             <p><%= t("home.tabs_four_description") %></p>
             <span></span>
@@ -164,13 +164,13 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <div  data-aos="fade-left" data-aos-duration="2000">
+          <div >
             <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
           </div>
         </div>
 
         <div id="Lexico" class="city"style="display:none">
-          <div class="tab-text"  data-aos="fade-up" data-aos-duration="2000">
+          <div class="tab-text">
             <h4><%= t("home.tabs_five_title") %></h4>
             <p><%= t("home.tabs_five_description") %></p>
             <span></span>
@@ -179,13 +179,13 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <div  data-aos="fade-left" data-aos-duration="2000">
+          <div >
             <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
           </div>
         </div>
 
         <div id="Brussels" class="city" style="display:none">
-          <div class="tab-text"  data-aos="fade-up" data-aos-duration="2000">
+          <div class="tab-text">
             <h4><%= t("home.tabs_six_title") %></h4>
             <p><%= t("home.tabs_six_description") %></p>
             <span></span>
@@ -204,6 +204,9 @@
         <%= cl_image_tag("slice-pill_bfxclr.png", :quality=>"auto") %>
         <%= cl_image_tag("dots-dots_mwj7rq.png", :quality=>"auto") %>
         <div class="third-section-media" data-aos="fade-right" data-aos-duration="2000">
+          <button class="third-section-play-button">
+            <h1>HELLO</h1>
+          </button>
         </div>
         <div class="third-video-text">
           <h3><span>FX ONE</span> Printer</h3>
