--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -489,10 +489,44 @@
   background-size: cover;
   box-shadow: 0px 8px 10px rgba(149, 156, 169, 0.20), -1px -1px 10px rgba(156, 173, 198, 0.20);
   z-index: 10;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &:hover {
+    .third-section-play-button {
+      opacity: 1;
+      transition: opacity 0.5s;
+    }
+  }
   @include for-medium-devices-down {
     height: 50vh;
     width: 85vw;
+  }
+}
+
+.third-section-play-button {
+  opacity: 0;
+  width: 160px;
+  height: 160px;
+  background-position: center;
+  transition: background 0.8s;
+  border: none;
+  border-radius: 50%;
+  padding: 12px 18px;
+  font-size: 16px;
+  text-transform: uppercase;
+  cursor: pointer;
+  color: white;
+  background-color: #F0CB6F;
+  box-shadow: 0 0 4px #999;
+  outline: none;
+  &:hover {
+    background: #E1975A radial-gradient(circle, transparent 1%, #E1975A 1%) center/15000%;
+  }
+  &:active {
+    background-color: #B96042;
+    background-size: 100%;
+    transition: background 0s;
   }
 }
 
